--- a/opparty/package.json
+++ b/opparty/package.json
@@ -22,5 +22,8 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "babel-preset-es2015": "^6.24.1"
     }
 }
