Default_set_up: added default sass builder

--- a/opparty/public/mix-manifest.json
+++ b/opparty/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/modules/events/main.js": "/js/modules/events/main.js"
+    "/js/modules/events/main.js": "/js/modules/events/main.js",
+    "/css/modules/events/main.css": "/css/modules/events/main.css"
 }
